# fastsse

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/actions/setup-env/: action.yml
.github/workflows/: lint.yml  publish.yml  test.yml
src/fastsse/: __init__.py  _core.py  _integration.py
tests/: test_core.py
